--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiplayer Math Dash!</title>
+    <title>Math Match!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
     <!-- Add Supabase JS Client -->
@@ -227,7 +227,7 @@
 
     <div id="app-container" class="w-full max-w-2xl mx-auto hidden">
         <header class="my-6 text-center">
-            <h1 class="text-4xl sm:text-5xl font-bold text-sky-600">Math Dash Buddies! 🚀</h1>
+            <h1 class="text-4xl sm:text-5xl font-bold text-sky-600">Math Match! 🚀</h1>
             <p id="user-id-display" class="mt-2 text-sm text-slate-500">Your User ID: <span class="font-semibold"></span></p>
         </header>
 
@@ -377,40 +377,43 @@
         // --- Authentication ---
         async function initializeAuth() {
             try {
-                // Try to get existing session
-                const { data: { session }, error: sessionError } = await supabase.auth.getSession();
-                
-                if (session) {
-                    return session.user;
-                }
+                // Generate a unique anonymous user ID
+                const uniqueId = `anon_${Date.now()}_${Math.random().toString(36).substring(2, 9)}`;
+                const uniqueEmail = `${uniqueId}@anonymous.mathdash.com`;
+                const uniquePassword = `pass_${Math.random().toString(36).substring(2, 12)}`;
 
-                // If no session, sign in anonymously
-                const { data: { user }, error } = await supabase.auth.signInWithPassword({
-                    email: 'anonymous@example.com',
-                    password: 'anonymous123'
+                // Try to sign up with unique credentials
+                const { data: { user }, error: signUpError } = await supabase.auth.signUp({
+                    email: uniqueEmail,
+                    password: uniquePassword,
+                    options: {
+                        data: {
+                            is_guest: true,
+                            unique_id: uniqueId
+                        }
+                    }
                 });
 
-                if (error) {
-                    // If sign in fails, try to sign up
-                    const { data: { user: newUser }, error: signUpError } = await supabase.auth.signUp({
-                        email: 'anonymous@example.com',
-                        password: 'anonymous123',
-                        options: {
-                            data: {
-                                is_guest: true
-                            }
-                        }
+                if (signUpError) {
+                    // If sign up fails, try to sign in
+                    const { data: { user: existingUser }, error: signInError } = await supabase.auth.signInWithPassword({
+                        email: uniqueEmail,
+                        password: uniquePassword
                     });
 
-                    if (signUpError) {
-                        // If both sign in and sign up fail, try one more time with a unique email
-                        const uniqueEmail = `anonymous_${Date.now()}@example.com`;
+                    if (signInError) {
+                        // If both sign up and sign in fail, try one more time with a different unique ID
+                        const retryId = `anon_${Date.now()}_${Math.random().toString(36).substring(2, 9)}`;
+                        const retryEmail = `${retryId}@anonymous.mathdash.com`;
+                        const retryPassword = `pass_${Math.random().toString(36).substring(2, 12)}`;
+
                         const { data: { user: finalUser }, error: finalError } = await supabase.auth.signUp({
-                            email: uniqueEmail,
-                            password: 'anonymous123',
+                            email: retryEmail,
+                            password: retryPassword,
                             options: {
                                 data: {
-                                    is_guest: true
+                                    is_guest: true,
+                                    unique_id: retryId
                                 }
                             }
                         });
@@ -419,7 +422,7 @@
                         return finalUser;
                     }
 
-                    return newUser;
+                    return existingUser;
                 }
 
                 return user;
@@ -463,7 +466,8 @@
                         avatar: hostAvatar,
                         score: 0,
                         isHost: true,
-                        joined_at: new Date().toISOString()
+                        joined_at: new Date().toISOString(),
+                        unique_id: currentUser.user_metadata.unique_id
                     }
                 },
                 current_question: null,
@@ -521,6 +525,12 @@
                     return;
                 }
 
+                // Check if player is already in the game
+                if (game.players[currentUserId]) {
+                    showModal("You are already in this game.");
+                    return;
+                }
+
                 const playerName = getPlayerName();
                 const playerAvatar = getRandomAvatar();
 
@@ -531,7 +541,8 @@
                         avatar: playerAvatar,
                         score: 0,
                         isHost: false,
-                        joined_at: new Date().toISOString()
+                        joined_at: new Date().toISOString(),
+                        unique_id: currentUser.user_metadata.unique_id
                     }
                 };
 
