--- a/index.html
+++ b/index.html
@@ -1066,6 +1066,7 @@
                  // A simple attempt to mark player as 'left' or remove them.
                  // However, `leaveGame()` is more robust and should be triggered by a button.
                  // Automatic removal on tab close is unreliable.
+                //these options need to be added.
             }
             if (gameSubscription) {
                 gameSubscription.unsubscribe();
